--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -70,3 +70,18 @@ h1.title {
   border: 1px solid #ff0000;
   transition: 0.2s;
 }
+
+.form-container {
+  width: 450px;
+  border: 1px solid #3d3d3d;
+  border-radius: 12px;
+  padding: 25px;
+}
+
+.form-container p {
+  margin-bottom: 0;
+}
+
+.form-container input[type="text"], .form-container textarea {
+  width: 100%;
+}
