--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -71,6 +71,22 @@ h1.title {
   transition: 0.2s;
 }
 
+.cancel-button {
+  background-color: #7bff00;
+  color: white;
+  border: 1px solid #7bff00;
+  border-radius: 5px;
+  padding: 5px 10px;
+  margin-top: 10px;
+}
+
+.cancel-button:hover {
+  background-color: white;
+  color: #7bff00;
+  border: 1px solid #7bff00;
+  transition: 0.2s;
+}
+
 .form-container {
   width: 450px;
   border: 1px solid #3d3d3d;
